...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_game"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
...
        android:text="@string/desc_game"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <!-- Company -->

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CompanyLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
...
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/image_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="7dp"
        android:text="@string/image"
        android:textAppearance="?android:attr/textAppearanceLarge" />

...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit" />

...
        android:layout_marginTop="15dp"
        android:layout_marginEnd="205dp"
        android:text="@string/genre_game"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/genero_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
...
