<resources>
    <string name="app_name">Koreku</string>
    <string name="title_games">Games</string>
    <string name="title_consoles">Consoles</string>
    <string name="title_profile">Profiles</string>
    <string name="title_services">Services</string>
    <string name="delete_games">Delete Games</string>
    <string name="list_by_gender">List By Genre</string>
    <string name="list_by_date">List By BuyDate</string>
    <string name="delete_consoles">Delete Consoles</string>
    <string name="delete_services">Delete Services</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="name_console">Console Name</string>
    <string name="buydate_console">Buy Date</string>
    <string name="company_console">Company</string>
    <string name="buydate_console_points">Buy Date: </string>
    <string name="company_console_points">Company: </string>
    <string name="image_console">Image</string>
    <string name="enter_title">Enter name or title...</string>
    <string name="enter_company">Enter company name</string>
    <string name="title_console_detail">Console Name: </string>
    <string name="date_picker">Pick the date</string>
    <string name="default_date">0000-00-00</string>
    <string name="image">Image</string>
    <string name="image_picker">Search image</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="game_status_points">Finished: </string>
    <string name="name_game">Game Name</string>
    <string name="desc_game">Description</string>
    <string name="status_game">Game Status: </string>
    <string name="enter_desc">Resume the game plot...</string>
    <string name="finished_string">Finished</string>
    <string name="not_finished_string">Not Finished</string>
    <string name="title_game_detail">Game Title: </string>
    <string name="desc_game_detail">Description: </string>
    <string name="genre_game">Genre </string>
    <string name="enter_genre">Kind of your game...</string>
    <string name="genre_game_points">Genre: </string>
    <string name="name_profile">Profile Name</string>
    <string name="platform_profile">Platform</string>
    <string name="mail_profile">e-mail</string>
    <string name="new_comment">New Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="comentario">Comment</string>
    <string name="share">Share</string>
    <string name="new_bug">Add Known Bug</string>
    <string name="knownbug">Known Bug: </string>
    <string name="delete">Delete</string>
    <string name="edit">Edit </string>
    <string name="account_name">Account Name</string>
    <string name="account_name_txt">Enter the account name...</string>
    <string name="platform_txt">Enter the platform...</string>
    <string name="email_txt">Enter the email...</string>
    <string name="service_name">Service Name</string>
    <string name="service_txt">Enter service name...</string>
    <string name="select_service">Select Subscription</string>
    <string name="price">Price</string>
    <string name="price_txt">Enter the subscription fee</string>
    <string name="start_date">Start Date</string>
    <string name="due_date">Due Date</string>
    <string name="subs_name">Subscription Name</string>
    <string name="title_console_api">Console (Loaded by API) </string>
    <string name="console_not_found">PriceCharting API console not found :( </string>
    <string name="addconsoles">Add Console</string>
    <string name="addgames">Add Game</string>
    <string name="addservices">Add Service</string>
    <string name="addprofile">Add Profile</string>
    <string name="searchpro">Search Profile</string>
    <string name="addbug">Add Bug</string>
    <string name="addcomment">Add Comment</string>
    <string name="updconsoles">Update Console</string>
    <string name="updgames">Update Game</string>
    <string name="updservices">Update Service</string>
    <string name="updprofile">Update Profile</string>
    <string name="name_profile_search">Enter the profile name to search it</string>
    <string name="notfound">Oops...Profile Not found</string>
    <string name="list_by_duedate">List by Due Date</string>
    <string name="priceapi">PriceCharting: Accesories and Games</string>
    <string name="search_box_hint">Search by console name</string>
    <string name="search">Search</string>
</resources>

